// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Project Progress Notification Item should hide when current value is equvalent to target value 1`] = `
<div
  aria-selected={false}
  className="root"
  role="listitem"
>
  <span
    className="processLabel"
  >
    target process
  </span>
  <div
    className="progressBar"
  >
    <div
      className="progressIndicator"
      style={
        Object {
          "width": "100%",
        }
      }
    />
  </div>
</div>
`;

exports[`Project Progress Notification Item should not over 100% of width 1`] = `
<div
  aria-selected={false}
  className="root"
  role="listitem"
>
  <span
    className="processLabel"
  >
    target process
  </span>
  <div
    className="progressBar"
  >
    <div
      className="progressIndicator"
      style={
        Object {
          "width": "100%",
        }
      }
    />
  </div>
</div>
`;

exports[`Project Progress Notification Item should print correctly 1`] = `
<div
  aria-selected={false}
  className="root"
  role="listitem"
>
  <span
    className="processLabel"
  >
    target process
  </span>
  <div
    className="progressBar"
  >
    <div
      className="progressIndicator"
      style={
        Object {
          "width": "10%",
        }
      }
    />
  </div>
</div>
`;
